Temporarily fixed the horizontal overflow

--- a/src/index.css
+++ b/src/index.css
@@ -65,8 +65,7 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  overflow-x: clip;
 }
 
 button {
